deploy/k8s/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kopo14-web
  labels:
    app.kubernetes.io/name: kopo14-web
spec:
  selector:
    app.kubernetes.io/name: kopo14-web
  ports:
    - name: http
      port: 80
      targetPort: http
